syntax = "proto3";

package file;

service File {
    rpc GenerateKey(GenerateKeyRequest) returns (KeyResponse) {}
    rpc GetFileByID(GetByFileByIDRequest) returns (File) {}
    rpc GetFileByKey(GetFileByKeyRequest) returns (File) {}
    rpc GetFilesByFolder(GetFilesByFolderRequest) returns (GetFilesByFolderResponse) {}
    rpc CreateFile(CreateFileRequest) returns (File) {}
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc UpdateFile(UpdateFileRequest) returns (File) {}
    rpc IsAllowed(IsAllowedRequest) returns (IsAllowedResponse) {}
}

message GenerateKeyRequest {
}

message KeyResponse {
    string key = 1;
}

message GetByFileByIDRequest {
    string id = 1;
}

message GetFileByKeyRequest {
    string key = 1;
}

message GetFilesByFolderRequest {
    string folderID = 1;
}

message GetFilesByFolderResponse {
    repeated File = 1;
}

message CreateFileRequest {
    optional string key = 1;
    string fullName = 2;
    int64 size = 3;
    string type = 4;
    string ownerID = 5;
    optional string parent = 6;
    optional string appID = 7;
}

message DeleteFileRequest {
    string id = 1;
}

message DeleteFileResponse {
    bool ok = 1;
}

message UpdateFileRequest {
    optional string fullName = 2;
    optional int64 size = 3;
    optional string ownerID = 5;
    optional string parent = 6;
    optional string appID = 7;
}

message IsAllowedRequest {
    string fileID = 1;
    string userID = 2;
}

message User {
    string id = 1;
    string firstName = 2;
    string lastName = 3;
    string mail = 4;
}

message App {
    string id = 1;
    string name = 2;
}

message File {
    string key = 1;
    string fullName = 2;
    string type = 3;
    string description = 4;
    string ownerID = 5;
    int64 size = 6;
    FileOrID parent = 10;
    optional string bucket = 11;
    string createdAt = 15;
    string updatedAt = 16;
}

message FileOrID {
    oneof file {
        string fileID = 1;
        File file = 2;
    }
}

